--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>revisao HTML-CSS</title>
 </head>
 <body>
-    
+    <h1> Cabeçalho nível 1</h1>
+    <h6>Cabeçalho nível 6</h6>
+    <p> Este é um parágrago</p>
 </body>
 </html>
