--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>revisao HTML-CSS</title>
 </head>
 <body>
+    <header>
+        <nav> </nav>
+    </header>
+    <main>
     <h1> Cabeçalho nível 1</h1>
     <h6>Cabeçalho nível 6</h6>
     <p> Este é um parágrago</p>
+    <a href = "www.google.com" target="_blank">
+    </a>
+    </main>
+    <footer>
+        <p>rodapé</p>
+    </footer>
+
 </body>
 </html>
