--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>revisao HTML-CSS</title>
+    <title>revisao HTML-CSS.</title>
     <style>
         *{
             font-family: Arial, Helvetica, sans-serif;
